// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AnimatedButtonBase Colors 1`] = `
<div
  className="p-6 flex w-full max-w-2xl justify-between"
>
  <button
    className="bg-primary-100 text-primary-700 font-sans font-semibold rounded px-4 py-2 text-xs tracking-widest shadow-sm active:shadow-none "
    style={Object {}}
    type="button"
  >
    Primary (default)
  </button>
  <button
    className="bg-gray-100 text-gray-700 font-sans font-semibold rounded px-4 py-2 text-xs tracking-widest shadow-sm active:shadow-none "
    style={Object {}}
    type="button"
  >
    Gray
  </button>
  <button
    className="bg-success-100 text-success-800 font-sans font-semibold rounded px-4 py-2 text-xs tracking-widest shadow-sm active:shadow-none "
    style={Object {}}
    type="button"
  >
    Success
  </button>
  <button
    className="bg-info-100 text-info-700 font-sans font-semibold rounded px-4 py-2 text-xs tracking-widest shadow-sm active:shadow-none "
    style={Object {}}
    type="button"
  >
    Info
  </button>
  <button
    className="bg-warning-100 text-warning-800 font-sans font-semibold rounded px-4 py-2 text-xs tracking-widest shadow-sm active:shadow-none "
    style={Object {}}
    type="button"
  >
    Warning
  </button>
  <button
    className="bg-danger-100 text-danger-700 font-sans font-semibold rounded px-4 py-2 text-xs tracking-widest shadow-sm active:shadow-none "
    style={Object {}}
    type="button"
  >
    Danger
  </button>
</div>
`;

exports[`Storyshots AnimatedButtonBase With Emoji 1`] = `
<div
  className="p-6"
>
  <button
    className="bg-primary-100 text-primary-700 font-sans font-semibold rounded px-4 py-2 text-xs tracking-widest shadow-sm active:shadow-none "
    style={Object {}}
    type="button"
  >
    <span
      aria-label="so cool"
      role="img"
    >
      😀 😎 👍 💯
    </span>
  </button>
</div>
`;

exports[`Storyshots AnimatedButtonBase With Text 1`] = `
<div
  className="p-6"
>
  <button
    className="bg-primary-100 text-primary-700 font-sans font-semibold rounded px-4 py-2 text-xs tracking-widest shadow-sm active:shadow-none "
    style={Object {}}
    type="button"
  >
    Hello AnimatedButtonBase
  </button>
</div>
`;

exports[`Storyshots ButtonBase Gray 1`] = `
<div
  className="p-6"
>
  <button
    className="bg-gray-100 text-gray-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
  >
    Hello ButtonBase
  </button>
</div>
`;

exports[`Storyshots ButtonBase With Emoji 1`] = `
<div
  className="p-6"
>
  <button
    className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
  >
    <span
      aria-label="so cool"
      role="img"
    >
      😀 😎 👍 💯
    </span>
  </button>
</div>
`;

exports[`Storyshots ButtonBase With Text 1`] = `
<div
  className="p-6"
>
  <button
    className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
  >
    Hello ButtonBase
  </button>
</div>
`;

exports[`Storyshots Flex Column 1`] = `
<div
  className="sc-AykKC iypZVA bg-primary-200"
>
  <button
    className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
  >
    Hey!
  </button>
  <button
    className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
  >
    Hey!
  </button>
</div>
`;

exports[`Storyshots Flex Nested 1`] = `
<div
  className="sc-AykKC hAMZeo bg-primary-200"
>
  <button
    className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
  >
    Hey!
  </button>
  <div
    className="sc-AykKC hcsRyq w-full bg-primary-300"
  >
    <button
      className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
    >
      Hey!
    </button>
    <div
      className="sc-AykKC dXrFSx bg-primary-400"
    >
      <button
        className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
      >
        Hey!
      </button>
      <button
        className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
      >
        Hey!
      </button>
    </div>
    <button
      className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
    >
      Hey!
    </button>
    <button
      className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
    >
      Hey!
    </button>
  </div>
</div>
`;

exports[`Storyshots Flex Row 1`] = `
<div
  className="sc-AykKC iOevnw bg-primary-200"
>
  <button
    className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
  >
    Hey!
  </button>
  <button
    className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
  >
    Hey!
  </button>
</div>
`;

exports[`Storyshots Grid Grid Demo 1`] = `
<div
  className="p-6 text-sm"
>
  <div
    className="grid gap-3 grid-cols-none"
  >
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-span-3"
    >
      GridCol1
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden h-32 col-auto"
    >
      GridCol2
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-auto"
    >
      GridCol3
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-auto col-start-2"
    >
      GridCol4
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-auto"
    >
      GridCol5
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-auto"
    >
      GridCol6
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-auto"
    >
      GridCol7
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-auto"
    >
      GridCol8
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-auto"
    >
      GridCol9
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-auto"
    >
      GridCol10
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-auto"
    >
      GridCol11
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-auto"
    >
      GridCol12
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-span-2"
    >
      GridCol13
    </div>
    <div
      className="border-2 border-teal-200 p-3 rounded-lg overflow-hidden  col-auto col-start-3"
    >
      GridCol14
    </div>
  </div>
</div>
`;

exports[`Storyshots Placeholder With Text 1`] = `
<main
  className="w-full min-h-screen flex flex-col items-start"
>
  <div
    className="bg-gray-300 flex justify-center items-center text-gray-700 overflow-hidden w-full h-16"
  >
    <span
      className="text-xs uppercase"
    >
      NavBar
    </span>
  </div>
  <div
    className="flex-1 w-full flex"
  >
    <div
      className="bg-gray-300 flex justify-center items-center text-gray-700 overflow-hidden w-48"
    >
      <span
        className="text-xs uppercase"
      >
        SideBar
      </span>
    </div>
    <section
      className="p-6"
    >
      <div
        className="sc-AykKC dXrFSx"
      >
        <a
          className="text-primary-700 underline"
          href="https://twitter.com/markdalgleish/status/1218663867485523968"
          target="_blank"
        >
          Meme-lord Mark Dalgleish (inventor of Playroom) thinks you should have a placeholder component.
        </a>
        <div
          className="sc-AykKC iOevnw"
        >
          <div
            className="bg-gray-300 flex justify-center items-center text-gray-700 overflow-hidden h-16 w-16"
          >
            <span
              className="text-xs uppercase"
            >
              Image
            </span>
          </div>
          <div
            className="bg-gray-300 flex justify-center items-center text-gray-700 overflow-hidden h-16 w-16"
          >
            <span
              className="text-xs uppercase"
            >
              Image
            </span>
          </div>
          <div
            className="bg-gray-300 flex justify-center items-center text-gray-700 overflow-hidden h-16 w-16"
          >
            <span
              className="text-xs uppercase"
            >
              Image
            </span>
          </div>
          <div
            className="bg-gray-300 flex justify-center items-center text-gray-700 overflow-hidden h-16 w-16"
          >
            <span
              className="text-xs uppercase"
            >
              Image
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
</main>
`;

exports[`Storyshots TextInput With Label 1`] = `
<div
  className="p-6"
>
  <div
    className="sc-AykKC dXrFSx"
  >
    <label
      className="flex flex-col"
      htmlFor="name"
    >
      <span
        className="block mb-2 text-xs text-gray-700"
      >
        Name
      </span>
      <input
        className="py-4 px-4 border-b-4 bg-gray-100 border-gray-400 focus:border-primary-400 focus:outline-none text-gray-700 text-sm"
        name="name"
        type="text"
      />
    </label>
    <label
      className="flex flex-col"
      htmlFor="password"
    >
      <span
        className="block mb-2 text-xs text-gray-700"
      >
        Password
      </span>
      <input
        className="py-4 px-4 border-b-4 bg-gray-100 border-gray-400 focus:border-primary-400 focus:outline-none text-gray-700 text-sm"
        name="password"
        type="text"
      />
    </label>
    <button
      className="bg-primary-100 text-primary-700 font-sans px-4 py-2 text-xs uppercase tracking-widest "
    >
      Submit
    </button>
  </div>
</div>
`;
